add new sections

--- a/src/index.html
+++ b/src/index.html
@@ -10,33 +10,29 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-
+      <div class="container header__container">
         <div class="header__top">
           <img
-          class="header__logo"
-          src="./images/logo.svg"
-          alt=""
+            class="header__logo"
+            src="./images/logo.svg"
+            alt=""
           >
           <div class="header__info">
             <span class="header__lang">UA</span>
           </div>
         </div>
-
         <div class="header__promo">
           <input
             class="checkbox"
             type="checkbox"
             id="checkox"
-            >
+          >
           <label class="hamburger" for="checkox">
             <span class="hamburger__line"></span>
             <span class="hamburger__line"></span>
             <span class="hamburger__line"></span>
           </label>
-
           <div class="header__menu hidden">
-
             <div class="hidden__info">
               <p class="hidden__working-hours">
                 Розклад сьогодні:
@@ -47,7 +43,6 @@
                 <span class="hidden__details">Київ, вул. М. Грушевського, 6</span>
               </p>
             </div>
-
             <div class="hidden__navbar">
               <nav class="hidden__nav">
                 <ul class="hidden__nav-list">
@@ -63,15 +58,12 @@
                 </ul>
               </nav>
             </div>
-
             <div class="hidden__actions">
               <button class="hidden__buy-btn">Купити квиток</button>
               <button class="hidden__member-btn">Стати членом</button>
             </div>
-
             <div class="hidden__img-container"></div>
           </div>
-
           <div class="header__hero">
             <div class="header__exhibition-info">
               <p class="header__dates">10 серпня - 10 листопада</p>
@@ -88,16 +80,99 @@
             <div class="header__bottom-info">
               <span class="header__bottom-dates">10.08 - 10.10</span>
             </div>
-
             <div class="header__img-container">
               <p class="header__img-desc">Дівчина з Поділля В. Тропінін</p>
             </div>
           </div>
-
         </div>
       </div>
     </header>
-
+    <main class="main">
+      <section class="exhibitions">
+        <div class="container">
+          <div class="exhibitions__wrapper">
+            <h2 class="exhibitions__title">Актуальні виставки</h2>
+            <h2 class="exhibitions__dates">11.07 - 22.09</h2>
+            <article class="exhibition exhibition--shifted">
+              <p class="exhibition__decor">Виставка “Ангели"</p>
+              <h3 class="exhibition__name">Кураторська виставка “Ангели"</h3>
+              <p class="exhibition__desc">Виставковий проект “Ангели" - знакова подія для української культури і водночас наймасштабніший...</p>
+              <button class="exhibition__btn">Купити квиток</button>
+            </article>
+            <img
+              src="./images/statues.png"
+              alt=""
+              class="exhibitions__img"
+            >
+            <article class="exhibition exhibition--middle">
+              <p class="exhibition__label">Діє постійно</p>
+              <h3 class="exhibition__name">Мистецтво ХХ ст. — XXI ст.</h3>
+              <p class="exhibition__desc exhibition__desc--middle">Знакові роботи Алли Горської, Миколи Самокиша, Федора Кричевського та інших митців</p>
+              <button class="exhibition__btn">Купити квиток</button>
+            </article>
+            <img
+              src="./images/kiss.png"
+              alt=""
+              class="exhibitions__img"
+            >
+            <article class="exhibition exhibition--shifted">
+              <p class="exhibition__label">Діє постійно</p>
+              <h3 class="exhibition__name">Стародавнє мистецтво</h3>
+              <p class="exhibition__desc">Визначні приклади стародавьного українського іконопису та живопису</p>
+              <button class="exhibition__btn">Купити квиток</button>
+            </article>
+            <img
+              src="./images/kozak.png"
+              alt=""
+              class="exhibitions__img"
+            >
+            <p class="exhibitions__archive">Архів виставок</p>
+          </div>
+        </div>
+      </section>
+      <section class="events">
+        <div class="container">
+          <div class="events__wrapper">
+            <h2 class="events__title">Найближчі події</h2>
+            <article class="event event--hudimov">
+              <p class="event__date">14.08
+                <span class="event__time"> 13:00</span>
+              </p>
+              <p class="event__label">Екскурсія</p>
+              <h3 class="event__name">Кураторські екскурсії від Павла Гудімова</h3>
+              <p class="event__desc">Таємниці підготовки, історії експонатів, магія дійства до і в момент вашої присутності – розгортатиметься...</p>
+              <button class="event__btn">Зараєструватися</button>
+            </article>
+            <article class="event event--australia">
+              <p class="event__date">18.08
+                <span class="event__time"> 14:00</span>
+              </p>
+              <p class="event__label">Майстер-клас</p>
+              <h3 class="event__name">Подорож до Австралії</h3>
+              <p class="event__desc">Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт кругосвітньої подорожі - Австралія.</p>
+              <button class="event__btn">Зараєструватися</button>
+            </article>
+            <p class="events__calendar">Календар подій</p>
+          </div>
+        </div>
+      </section>
+      <section class="promo">
+        <div class="container promo__container">
+          <div class="promo__info">
+            <h1 class="promo__title">Сплануйте візит до музею</h1>
+            <p class="promo__desc">
+              Оберіть зручний день, зареєструйтесь на події, що цікавлять,
+              купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом.
+            </p>
+            <button class="promo__btn">Почати</button>
+          </div>
+          <div class="promo__img-container"></div>
+        </div>
+      </section>
+      <section class="news"></section>
+      <section class="subscribe"></section>
+    </main>
+    <footer class="footer"></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
