Added actual exhibitions block

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
                 <a href="" class="nav__link">Спланувати візит</a>
               </li>
               <li class="nav__item">
-                <a href="" class="nav__link">Виставки та події</a>
+                <a href="#actual" class="nav__link">Виставки та події</a>
               </li>
               <li class="nav__item">
                 <a href="" class="nav__link">Колекція</a>
@@ -85,7 +85,91 @@
       </div>
     </header>
 
+    <main class="main">
+      <section class="actual" id="actual">
+        <div class="container container__actual">
+          <h2 class="actual__title">Актуальні виставки</h2>
+          <article class="exhibition">
+            <div class="exhibition__img-box exhibition__img-box--angel">
+              <img
+                src="./images/actual/angel.png"
+                alt="Angel"
+                class="exhibition__img exhibition__img--angel"
+                >
+            </div>
+            <div class="card exhibition__card">
+              <p class="card__period card__period--limited">11.07 - 22.09</p>
+              <h3 class="card__caption">Кураторська виставка “Ангели”</h3>
+              <div class="card__excerpt-mobile">
+                <p class="card__excerpt">
+                  Виставковий проект «Ангели» – знакова подія для української
+                  культури і водночас наймасштабніший...
+                </p>
+                <img
+                  src="./images/actual/angel-mobile.png"
+                  alt="Angel"
+                  class="card__img card__img--angel"
+                >
+              </div>
+              <button class="card__button">Купити квиток</button>
+            </div>
+          </article>
+          <article class="exhibition  exhibition--right">
+            <div class="card exhibition__card">
+              <p class="card__period">Діє постійно</p>
+              <h3 class="card__caption">Мистецтво ХХ ст. — XXI ст.</h3>
+              <div class="card__excerpt-mobile">
+                <img
+                  src="./images/actual/couple-mobile.png"
+                  alt="Couple"
+                  class="card__img card__img--couple"
+                >
+                <p class="card__excerpt">
+                  Знакові роботи Алли Горської, Миколи Самокиша, Федора
+                  Кричевського та інших митців.
+                </p>
+              </div>
+              <button class="card__button">Купити квиток</button>
+            </div>
+            <div class="exhibition__img-box exhibition__img-box--art20-21">
+              <img
+                src="./images/actual/couple.png"
+                alt="Couple"
+                class="exhibition__img exhibition__img--couple"
+              >
+            </div>
+          </article>
+          <article class="exhibition">
+            <div class="exhibition__img-box exhibition__img-box--anc-art">
+              <img
+                src="./images/actual/kozak.png"
+                alt="Kozak with bandura"
+                class="exhibition__img exhibition__img--kozak">
+            </div>
+            <div class="card exhibition__card">
+              <p class="card__period">Діє постійно</p>
+              <h3 class="card__caption">Стародавнє мистецтво</h3>
+              <div class="card__excerpt-mobile">
+                <p class="card__excerpt">
+                  Визначні приклади стародавнього українського іконопису та живопису.
+                </p>
+                <img
+                  src="./images/actual/kozak-mobile.png"
+                  alt="Kozak"
+                  class="card__img card__img--kozak"
+                >
+              </div>
+              <button class="card__button">Купити квиток</button>
+            </div>
+          </article>
+          <p class="actual__archieve">
+            <a href="#" class="actual__link">Архів виставок</a>
+            <span class="actual__line"></span>
+          </p>
+        </div>
+      </section>
 
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
