--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -122,11 +122,11 @@
                 <p class="bottom__text">
                   Графік роботи:
                   <br><br>
-                  <strong>12:00 — 20:00</strong> середа<br>
-                  <strong>12:00 — 20:00</strong> четвер<br>
-                  <strong>12:00 — 20:00</strong> п’ятниця<br>
-                  <strong>11:00 — 19:00</strong> субота<br>
-                  <strong>11:00 — 19:00</strong> неділя<br>
+                  <span>12:00 — 20:00</span> середа<br>
+                  <span>12:00 — 20:00</span> четвер<br>
+                  <span>12:00 — 20:00</span> п’ятниця<br>
+                  <span>11:00 — 19:00</span> субота<br>
+                  <span>11:00 — 19:00</span> неділя<br>
                   <br>
                   вихідні понеділок, вівторок<br>
                   Каса припиняє роботу за 1 годину<br>
@@ -182,6 +182,186 @@
 
       <a href="#" class="header__events">Події</a>
     </header>
+
+    <section class="section__small actual">
+      <h3 class="actual__heading heading">Актуальні події</h3>
+      <div class="actual__first-part">
+        <img src="./images/Rectangle 2.2.png"
+          alt="event-photo"
+          class="actual__img actual__img_first">
+        <div class="actual__description">
+          <div class="actual__options">
+            <p class="actual__type">виставка</p>
+            <p class="actual__date">26.08-29.11.2019</p>
+          </div>
+          <div class="actual__name">Йду і повертаюсь</div>
+          <div class="actual__text">
+            Національний Художній Музей України презентує <br>
+            унікальну частину колекції Градобанку - <br>
+            українське мистецтво другої половини <br>
+            1980-1995 років.
+          </div>
+        </div>
+      </div>
+      <div class="actual__second-part">
+        <div class="actual__description">
+          <div class="actual__options">
+            <p class="actual__type">виставка</p>
+            <p class="actual__date">26.08-29.11.2019</p>
+          </div>
+          <div class="actual__name">І спогади і мрії</div>
+          <div class="actual__text">
+            Національний художній музей України до 100 <br>
+            річчя від дня народження   видатної української <br>
+            художниці Тетяни Яблонської  відкриває <br>
+            ретроспективну ювілейну виставку «І спогади і <br>
+            мрії».
+          </div>
+        </div>
+        <img src="./images/Rectangle 4.2.png"
+          alt="event-photo"
+          class="actual__img actual__img_second">
+      </div>
+    </section>
+
+    <section class="from-romantism">
+      <img src="./images/Rectangle 20.1.png"
+        alt="background-field"
+        class="from-romantism__background">
+      <div class="from-romantism__description">
+        <div class="from-romantism__options">
+          <p class="from-romantism__type">виставка</p>
+          <p class="from-romantism__date">26.08-29.11.2019</p>
+        </div>
+        <div class="from-romantism__name">Від класицизму до<br>романтизму</div>
+      </div>
+
+    </section>
+
+    <section class="section__small">
+      <div class="gallery">
+        <h3 class="actual__heading heading">Актуальні події</h3>
+
+        <div class="gallery__first-row">
+          <img src="./images/gallery/1.png"
+            alt="gallery-photo"
+            class="gallery__img-1">
+          <img src="./images/gallery/2.png"
+            alt="gallery-photo"
+            class="gallery__img-2">
+          <img src="./images/gallery/3.png"
+            alt="gallery-photo"
+            class="gallery__img-3">
+        </div>
+        <div class="gallery__second-row">
+          <img src="./images/gallery/4.png"
+            alt="gallery-photo"
+            class="gallery__img-4">
+          <img src="./images/gallery/5.png"
+            alt="gallery-photo"
+            class="gallery__img-5">
+          <img src="./images/gallery/6.png"
+            alt="gallery-photo"
+            class="gallery__img-6">
+        </div>
+      </div>
+      <button class="menu__buy-arrow gallery__button">></button>
+    </section>
+
+    <section class="follow">
+      <img src="./images/following.png"
+        alt="follow-img"
+        class="follow__background">
+      <form class="follow__content">
+        <h3 class="follow__heading">Підписка</h3>
+        <p class="follow__sentence">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <div class="follow__field">
+          <input type="email"
+            name="e-mail"
+            class="follow__email"
+            placeholder="E-mail"
+            required>
+          <input type="submit"
+            value=">"
+            class="follow__submit menu__buy-arrow">
+        </div>
+      </form>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__first-block">
+        <div class="footer__insta">
+          <img src="./images/NAMUsmaller.png"
+            alt="logo"
+            class="footer__logo">
+          <img src="./images/Group 2.png" alt="medias">
+        </div>
+        <div class="footer__shedule">
+          <p class="footer__text">
+            Графік роботи:
+            <br><br>
+            <span class="footer__ibm-bold">12:00 — 20:00</span> середа<br>
+            <span class="footer__ibm-bold">12:00 — 20:00</span> четвер<br>
+            <span class="footer__ibm-bold">12:00 — 20:00</span> п’ятниця<br>
+            <span class="footer__ibm-bold">11:00 — 19:00</span> субота<br>
+            <span class="footer__ibm-bold">11:00 — 19:00</span> неділя<br>
+            <br>
+            вихідні понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину<br>
+            до закриття музею
+          </p>
+        </div>
+        <div class="footer__contacts">
+          <p class="footer__text">
+            Контакти: <br>
+            <br>
+            вул. М. Грушевського, 6; Київ, 01001<br>
+            тел. +38 (044) 278-13-57<br>
+            факс +38 (044) 278-74-54<br>
+            e-mail: info@namu.kiev.ua<br>
+          </p>
+        </div>
+      </div>
+
+      <div class="footer__line"></div>
+
+      <div class="footer__second-block">
+        <div class="footer__nav-first">
+          <ul class="footer__navlist">
+            <li class="footer__navitem">
+              <a href="#" class="footer__link">Галерея</a>
+            </li>
+            <li>
+              <a href="#" class="footer__link">Виставки та події</a>
+            </li>
+            <li>
+              <a href="#" class="footer__link">Відвідування</a>
+            </li>
+            <li>
+              <a href="#" class="footer__link">Стати нашим другом</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__nav-second">
+          <ul class="footer__navlist">
+            <li class="footer__navitem">
+              <a href="#" class="footer__link">Про нас</a>
+            </li>
+            <li>
+              <a href="#" class="footer__link">Магазин</a>
+            </li>
+            <li>
+              <a href="#" class="footer__link">Блог</a>
+            </li>
+            <li>
+              <a href="#" class="footer__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
