--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <div class="header__container container">
+        <div class="header__logo"></div>
+
+        <div class="header__menu menu">
+          <input
+            class="menu__checkbox"
+            type="checkbox"
+            id="checkbox"
+          >
+          <label class="menu__label" for="checkbox"></label>
+          <div class="menu__line menu__line--first"></div>
+          <div class="menu__line menu__line--second"></div>
+          <div class="menu__line menu__line--third"></div>
+          <div class="menu__line menu__line--fourth"></div>
+          <div class="menu__background"></div>
+          <div class="menu__info menu__info--schedule">
+            <span class="menu__info-iemt">Розклад сьогодні:</span>
+            <span class="menu__info-iemt">12:00 - 19:00</span>
+          </div>
+          <div class="menu__info menu__info--address">
+            <span class="menu__info-iemt">Адреса:</span>
+            <span class="menu__info-iemt">Київ, вул. М. Грушевського, 6</span>
+          </div>
+          <button class="menu__button button menu__button--red">Купити квиток</button>
+          <button class="menu__button button menu__button--green">Стати членом</button>
+          <div class="menu__picture"></div>
+
+          <nav class="header__navigation navigation">
+            <ul class="navigation__list">
+              <li>
+                <a href="#visit" class="navigation__link">Спланувати візит</a>
+              </li>
+              <li>
+                <a href="#exhibition" class="navigation__link">Виставки та події</a>
+              </li>
+              <li>
+                <a href="#collection" class="navigation__link">Колекція</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="header__title title">
+            <p class="title__duration">10 серпня - 10 листопада</p>
+            <h1 class="title__name">
+              <p class="title__name-item">Мистецтво</p>
+              <p class="title__name-item">ХІХ - ХХ ст.</p>
+            </h1>
+            <p class="title__info">Внесок українських митців у світову культуру 19-20ст</p>
+            <span class="title__dates">10.08 - 10.10</span>
+            <button class="title__button button">Купити квиток</button>
+            <span class="title__line"></span>
+            <div class="title__picture">
+              <p class="title__picture-name">Дівчина з Поділля<br>В. Тропінін</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="header__selection selection">
+          <label class="selection__languages" for="language">
+            <input
+              type="radio"
+              name="language"
+              id="language"
+            >
+            <div>
+              <input
+                class="selection__item"
+                type="radio"
+                name="language"
+                value="UA"
+                id="language[UA]"
+              >
+              <label class="selection__label" for="language[UA]">UA</label>
+              <input
+                class="selection__item"
+                type="radio"
+                name="language"
+                value="EN"
+                id="language[EN]"
+              >
+              <label class="selection__label" for="language[EN]">EN</label>
+            </div>
+          </label>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
