Two more blocks

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container container__header">
+      <div class="container container--header">
         <div class="header__top">
           <a href="#">
             <img
@@ -87,7 +87,7 @@
 
     <main class="main">
       <section class="actual" id="actual">
-        <div class="container container__actual">
+        <div class="container">
           <h2 class="actual__title">Актуальні виставки</h2>
           <article class="exhibition">
             <div class="exhibition__img-box exhibition__img-box--angel">
@@ -162,13 +162,93 @@
               <button class="card__button">Купити квиток</button>
             </div>
           </article>
-          <p class="actual__archieve">
-            <a href="#" class="actual__link">Архів виставок</a>
-            <span class="actual__line"></span>
+          <p class="archieve">
+            <a href="#" class="archieve__link">Архів виставок</a>
+            <span class="archieve__line"></span>
           </p>
         </div>
       </section>
 
+      <section class="events" id="events">
+        <div class="container container--events">
+          <h2 class="events__title">Найближчі події</h2>
+          <div class="event events__event">
+            <div class="event__wrapper">
+              <div class="event__date-and-time">
+                <p class="event__date">14.08</p>
+                <p class="event__time">13:00</p>
+              </div>
+              <div class="card event__card">
+                <div class="card__wrapper">
+                  <p class="card__period card__period--mobile">14 серпня, 13:00</p>
+                  <p class="card__type">Екскурсія</p>
+                </div>
+                <h3 class="card__caption">Кураторські екскурсії від Павла Гудімова </h3>
+                <p class="card__excerpt">
+                  Таємниці підготовки, історії експонатів, магія дійства до і в момент
+                  вашої присутності – розгортатиметься...
+                </p>
+                <button class="card__button card__button--visible">Зареєструватись</button>
+              </div>
+            </div>
+            <img
+              src="./images/events/Pavel-Gudimov.png"
+              alt=""
+              class="event__img"
+            >
+          </div>
+          <div class="event events__event">
+            <img
+              src="./images/events/Travel-to-Australia.png"
+              alt="Travel-to-Australia"
+              class="event__img"
+            >
+            <div class="event__wrapper">
+              <div class="event__date-and-time event__date-and-time--right">
+                <p class="event__date">18.08</p>
+                <p class="event__time">14:00</p>
+              </div>
+              <div class="card event__card">
+                <div class="card__wrapper">
+                  <p class="card__period card__period--mobile">18 серпня, 14:00</p>
+                  <p class="card__type">Майстер-клас</p>
+                </div>
+                <h3 class="card__caption">Подорож до Австралії</h3>
+                <p class="card__excerpt">
+                  Цієї неділі о 14:00 на арт-мандрівників чекає останній
+                  пункт кругосвітньої подорожі - Австралія.
+                </p>
+                <button class="card__button card__button--visible">Зареєструватись</button>
+              </div>
+            </div>
+          </div>
+          <p class="archieve">
+            <a href="#" class="archieve__link">Календар подій</a>
+            <span class="archieve__line"></span>
+          </p>
+        </div>
+      </section>
+
+      <section class="promo-bot">
+        <div class="container container--promo-bot">
+          <img
+            src="./images/bot-girl.png"
+            alt="Promo girl"
+            class="promo-bot__img"
+          >
+          <div class="promo-bot__wrapper">
+            <p class="promo-bot__title">Сплануйте<br> візит до музею</p>
+            <div class="promo-bot__inner">
+              <p class="promo-bot__text">
+                Оберіть зручний день, зареєструйтесь
+                на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо
+                не завадило вам насолоджуватись мистецтвом
+              </p>
+              <button class="promo-bot__button">Почати</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
