--- a/src/index.html
+++ b/src/index.html
@@ -12,34 +12,66 @@
   </head>
   <body>
     <header class="header">
-      <label for="toggle" class="header__menu"></label>
+
       <input
         type="checkbox"
         id="toggle"
         class="header__toggle">
+      <label for="toggle" class="header__menu"></label>
+
+      <nav class="header__nav nav">
+        <label for="toggle" class="nav__but"></label>
+        <a href="#" class="nav__logo">
+          <h3 class="nav__logo heading">
+            Na<br>
+            mu
+          </h3>
+        </a>
+
+        <ul class="nav__list">
+          <li class="nav__li">
+            <a href="#gallery" class="nav__link">Галерея</a>
+            <a href="#exhibitions" class="nav__link">Виставки та події</a>
+            <a href="#" class="nav__link">Відвідування</a>
+            <a href="#" class="nav__link">Стати нашим другом</a>
+            <a href="#" class="nav__link">Про Нас</a>
+            <a href="#" class="nav__link">Магазин</a>
+            <a href="#" class="nav__link">Блог</a>
+            <a href="#" class="nav__link">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+
       <h3 class="header__logo heading">
         Na<br>
         mu
       </h3>
+
       <img
         class="header__photo"
         src="images/header.jpg"
         alt="Natsionalnij hudozhnij muzej Ukrayini">
+
       <div class="header__block">
         <h1 class="header__heading heading">
           Худож<span class="header__heading--trans">ній</span><br>
           музей
         </h1>
+
         <div class="header__button text">
           Квитки
+          <button class="header__next"></button>
         </div>
       </div>
-      <p class="header__vertical-text text">Події</p>
+
+      <a href="#exhibitions">
+        <p class="header__vertical-text text">Події</p>
+      </a>
     </header>
 
     <main>
-      <section id="exhibitions" class="section">
-        <div class="exhibitions">
+      <section class="section">
+        <div id="exhibitions" class="exhibitions">
           <h2 class="exhibitions__heading heading">
             Актуальні події
           </h2>
@@ -103,7 +135,7 @@
       </section>
 
       <section class="lectures">
-        <div class="lectures__photo"></div>
+        <div id="lectures" class="lectures__photo"></div>
         <div class="lectures__info">
           <div class="lectures__top">
             <div class="lectures__name text">ЛЕКЦІЯ</div>
@@ -114,7 +146,7 @@
       </section>
 
       <section class="section">
-        <div class="gallery">
+        <div id="gallery" class="gallery">
           <div class="gallery__heading heading">Галерея</div>
           <div class="gallery__photos">
             <div class="gallery__photo">
@@ -131,6 +163,12 @@
             </div>
             <div class="gallery__photo">
               <img
+                class="gallery__img gallery__img-none"
+                src="images/duck.png"
+                alt="duck">
+            </div>
+            <div class="gallery__photo">
+              <img
                 class="gallery__img"
                 src="images/photo3.png"
                 alt="in the garden">
@@ -141,12 +179,24 @@
                 src="images/photo4.png"
                 alt="at sea">
             </div>
+            <div class="gallery__photo">
+              <img
+                class="gallery__img gallery__img-none"
+                src="images/cosacs.png"
+                alt="cosacks">
+            </div>
           </div>
           <div class="gallery__button-more"></div>
+          <div class="gallery__slider">
+            <div class="gallery__circle"></div>
+            <div class="gallery__circle"></div>
+            <div class="gallery__circle"></div>
+            <div class="gallery__circle"></div>
+          </div>
         </div>
       </section>
 
-      <section class="subscription">
+      <section id="subscription" class="subscription">
         <div class="subscription__heading heading">
           Підписка
         </div>
@@ -161,7 +211,8 @@
           <input
             type="email"
             class="subscription__email"
-            placeholder="E-mail">
+            placeholder="E-mail"
+            required>
           <button class="subscription__button"></button>
         </form>
       </section>
@@ -217,10 +268,10 @@
             <div class="futer__nav">
               <ul class="futer__nav-list">
                 <li class="futer__nav-li">
-                  <a class="futer__link text" href="#">Галерея</a>
+                  <a class="futer__link text" href="#gallery">Галерея</a>
                 </li>
                 <li class="futer__nav-li">
-                  <a class="futer__link text" href="#">Виставки та події</a>
+                  <a class="futer__link text" href="#exhibitions">Виставки та події</a>
                 </li>
                 <li class="futer__nav-li">
                   <a class="futer__link text" href="#">Відвідування</a>
