--- a/src/index.html
+++ b/src/index.html
@@ -416,7 +416,7 @@
         </a>
       </div>
     </footer>
-    <script type="text/javascript" src="./scripts/lib/slick/slick.min.js"></script>
+    <!-- <script type="text/javascript" src="./scripts/lib/slick/slick.min.js"></script> -->
     <script src="scripts/main.js"></script>
   </body>
 </html>
