--- a/src/index.html
+++ b/src/index.html
@@ -33,25 +33,25 @@
               <nav class="nav menu__nav ">
                 <ul class="nav__list">
                   <li class="nav__item nav__item_active">
-                    <a class="nav__link" href="#">Галерея</a>
+                    <a class="nav__link" href="#gallery">Галерея</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#about-us">Виставки та події</a>
+                    <a class="nav__link" href="#events">Виставки та події</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#gallery">Відвідування</a>
+                    <a class="nav__link" href="#">Відвідування</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#consultation">Стати нашим другом</a>
+                    <a class="nav__link" href="#">Стати нашим другом</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#testimonials">Про Нас</a>
+                    <a class="nav__link" href="#">Про Нас</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#contacts">Магазин</a>
+                    <a class="nav__link" href="#">Магазин</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#contacts">Блог</a>
+                    <a class="nav__link" href="#">Блог</a>
                   </li>
                   <li class="nav__item">
                     <a class="nav__link" href="#contacts">Контакти</a>
@@ -70,8 +70,10 @@
             <button class="menu__button menu__button_hours-n-tickets">години та квитки</button>
             <button class="menu__button menu__button_visit">відвідати</button>
           </div>
-          <button class="menu__buy-tickets">Купити квитки</button><!--
-          --><button class="menu__buy-arrow">→</button>
+          <div class="menu__buy-container">
+            <button class="menu__buy-tickets">Купити квитки</button><!--
+            --><button class="menu__buy-arrow">→</button>
+          </div>
 
           <div class="menu__bottom bottom">
             <div class="bottom__first-block">
@@ -84,10 +86,10 @@
               <div class="bottom__nav-first">
                 <ul class="bottom__navlist">
                   <li class="bottom__navitem">
-                    <a href="#" class="bottom__link">Галерея</a>
+                    <a href="#gallery" class="bottom__link">Галерея</a>
                   </li>
                   <li>
-                    <a href="#" class="bottom__link">Виставки та події</a>
+                    <a href="#events" class="bottom__link">Виставки та події</a>
                   </li>
                   <li>
                     <a href="#" class="bottom__link">Відвідування</a>
@@ -109,7 +111,7 @@
                     <a href="#" class="bottom__link">Блог</a>
                   </li>
                   <li>
-                    <a href="#" class="bottom__link">Контакти</a>
+                    <a href="#contacts" class="bottom__link">Контакти</a>
                   </li>
                 </ul>
               </div>
@@ -144,16 +146,16 @@
                 </p>
               </div>
             </div>
+            <div class="menu__full-bottom">
+              <p class="menu__terms bottom__text-first">
+                © 2010 — 2020
+              </p>
+              <p class="menu__terms">
+                Privacy — Terms
+              </p>
+            </div>
           </div>
 
-          <div class="menu__full-bottom">
-            <p class="menu__terms bottom__text-first">
-              © 2010 — 2020
-            </p>
-            <p class="menu__terms">
-              Privacy — Terms
-            </p>
-          </div>
         </div>
       </div>
       <img src="./images/NAMU.png"
@@ -180,10 +182,10 @@
         --><button class="header__buy-arrow">→</button>
       </div>
 
-      <a href="#" class="header__events">Події</a>
+      <a href="#events" class="header__events">Події</a>
     </header>
 
-    <section class="section__small actual">
+    <section class="section__small actual" id="events">
       <h3 class="actual__heading heading">Актуальні події</h3>
       <div class="actual__first-part">
         <img src="./images/Rectangle 2.2.png"
@@ -233,14 +235,14 @@
           <p class="from-romantism__type">виставка</p>
           <p class="from-romantism__date">26.08-29.11.2019</p>
         </div>
-        <div class="from-romantism__name">Від класицизму до<br>романтизму</div>
+        <div class="from-romantism__name">Від класицизму <br class="smll-scr">до <br class="lrg-scr">романтизму</div>
       </div>
 
     </section>
 
     <section class="section__small">
-      <div class="gallery">
-        <h3 class="actual__heading heading">Актуальні події</h3>
+      <div class="gallery" id="gallery">
+        <h3 class="actual__heading heading">Галерея</h3>
 
         <div class="gallery__first-row">
           <img src="./images/gallery/1.png"
@@ -275,7 +277,7 @@
       <form class="follow__content">
         <h3 class="follow__heading">Підписка</h3>
         <p class="follow__sentence">
-          Бути в курсі всіх актуальних подій та останніх новин.
+          Бути в курсі всіх актуальних <br>подій та останніх новин.
         </p>
         <div class="follow__field">
           <input type="email"
@@ -291,6 +293,14 @@
     </section>
 
     <footer class="footer">
+      <div class="footer__insta-alter">
+        <img src="./images/NAMUsmaller.png"
+          alt="logo"
+          class="footer__logo">
+        <img src="./images/Group 2.png"
+          alt="medias"
+          class="footer__medias">
+      </div>
       <div class="footer__first-block">
         <div class="footer__insta">
           <img src="./images/NAMUsmaller.png"
@@ -313,7 +323,7 @@
             до закриття музею
           </p>
         </div>
-        <div class="footer__contacts">
+        <div class="footer__contacts" id="contacts">
           <p class="footer__text">
             Контакти: <br>
             <br>
@@ -331,10 +341,10 @@
         <div class="footer__nav-first">
           <ul class="footer__navlist">
             <li class="footer__navitem">
-              <a href="#" class="footer__link">Галерея</a>
+              <a href="#gallery" class="footer__link">Галерея</a>
             </li>
             <li>
-              <a href="#" class="footer__link">Виставки та події</a>
+              <a href="#events" class="footer__link">Виставки та події</a>
             </li>
             <li>
               <a href="#" class="footer__link">Відвідування</a>
@@ -356,7 +366,7 @@
               <a href="#" class="footer__link">Блог</a>
             </li>
             <li>
-              <a href="#" class="footer__link">Контакти</a>
+              <a href="#contacts" class="footer__link">Контакти</a>
             </li>
           </ul>
         </div>
